manifest/ddc_manifest2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddc-server
  labels:
    app: ddc-server
    app.kubernetes.io/part-of: ddc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddc-server
  template:
    metadata:
      labels:
        app: ddc-server
        app.kubernetes.io/part-of: ddc
    spec:
      containers:
        - name: ddc-server
          image: node:10-alpine
          imagePullPolicy: IfNotPresent
          workingDir: /tmp/ddc-app
          command: ["/bin/sh", "-c"]
          args:
            - npm install;
              chown node:node . .;
              node /tmp/ddc-app/bin/www;
          securityContext:
            runAsUser: 1000
          ports:
            - containerPort: 4000
              name: ddc
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 50Mi
          volumeMounts:
            - mountPath: /tmp/ddc-app
              name: ddc-data
            - mountPath: /mnt/viya-share/graphs
              name: my-graphs
      volumes:
        - name: ddc-data
          emptyDir: {}
        - name: my-graphs
          hostPath:
            path: /mnt/viya-share/graphs

---
apiVersion: v1
kind: Service
metadata:
  name: ddc-service
  labels:
    app: ddc-service
    app.kubernetes.io/part-of: ddc
spec:
  ports:
    - name: ddc-port
      port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: ddc-server
---
